--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         var data={
             "init":function()
             {
-                var s=["images/1.jpg","images/2.jpg","images/3.png","images/4.jpg","images/5.png","images/6.png","images/7.png","images/8.jpg","images/9.png","images/10.jpg","images/11.jpg","images/12.png"];
+                var s=["images/1.jpg","images/2.jpg","images/3.png","images/4.jpg","images/5.png","images/6.png"];
                 var p=0;
                 console.log(this);
                 for(var i in s){
@@ -122,7 +122,7 @@
                     this.images[i].onload=function()
                     {
                         p++;
-                        if(!(p%2))
+                        if(p == 3)
                         document.getElementById("load").innerHTML += ".";
                         if(p==6) document.getElementById("load").innerHTML += " ";
                         if (p==s.length)  document.getElementById("load").innerHTML = "加载完毕";
